--- a/Growth/package.json
+++ b/Growth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Growth",
+  "name": "growth",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
