--- a/Growth/package.json
+++ b/Growth/package.json
@@ -33,6 +33,7 @@
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "rxjs-compat": "^6.6.7",
+    "swiper": "^11.2.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
